--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Background Video -->
     <video id="background-video" autoplay loop muted>
-        <source src="C:\Users\puza_snacks\Desktop\website\video.mp4" type="video/mp4">
+        <source src="media/background-video.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
